--- a/lang/build.gradle
+++ b/lang/build.gradle
@@ -2,6 +2,13 @@ plugins {
     id 'java-library'
 }
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+version = '0.0.1'
+tasks.withType(AbstractCompile) {  // ソースファイルの文字エンコーディングはUTF-8とみなす
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.google.guava:guava:23.0'
