--- a/lang/build.gradle
+++ b/lang/build.gradle
@@ -12,9 +12,14 @@ tasks.withType(AbstractCompile) {  // ソースファイルの文字エンコー
 dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.google.guava:guava:23.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
 
 repositories {
     jcenter()
+}
+
+test {
+    useJUnitPlatform()
 }
