--- a/lang/build.gradle
+++ b/lang/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'com.google.guava:guava:23.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.2.0'
 }
 
 repositories {
