--- a/lang/build.gradle
+++ b/lang/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'eclipse-wtp'
 }
 
+ext {
+    junitJupiterVersion = '5.2.0'
+    junitPlatformVersion = '1.2.0'
+}
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 version = '0.0.1'
@@ -18,9 +23,9 @@ configurations {
 dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.google.guava:guava:23.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
-    eclipseTestLauncher 'org.junit.platform:junit-platform-launcher:1.2.0'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
+    eclipseTestLauncher "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"
 }
 
 repositories {
